# rrfs-workflow

./: .flake8  .gitignore  .gitmodules  .readthedocs.yaml  .yamllint  CMakeLists.txt  Externals.cfg  Externals.rtma  Externals_gsi.cfg  Init.sh  LICENSE.md  README.md  Setup-RTMA.md  devbuild.sh  devclean.sh  get_rtma  log_change.py  pyproject.toml  rename_model.sh  rrfs-workflow_meta.h.in
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE  pull_request_template.md
doc/: Setup-RRFS.md  build_and_run.md
docs/: Setup-RRFS.md  Setup-RTMA.md  requirements.txt
ecf/: make_nco_links.sh  setup_ecf_links.sh
env/: build_cheyenne_gnu.env  build_cheyenne_intel.env  build_hera_intel.env  build_hera_intel.env_DA  build_jet_intel.env  build_jet_intel.env_DA  build_orion_intel.env  build_orion_intel.env_DA  build_wcoss2_intel.env  build_wcoss_dell_p3_intel.env  build_wcoss_dell_p3_intel.env_DA  srw_common  wflow_hera.env  wflow_jet.env  wflow_wcoss2.env
etc/: lmod-setup.csh  lmod-setup.sh
fix/: nam_nests.hiresf_nn.txt
jobs/: JREGIONAL_BUFRSND  JREGIONAL_CALC_ENSMEAN  JREGIONAL_GET_EXTRN_MDL_FILES  JREGIONAL_GET_GEFS_LBCS_FILES  JREGIONAL_JEDIENVAR_IODA  JREGIONAL_MAKE_GRID  JREGIONAL_MAKE_ICS  JREGIONAL_MAKE_LBCS  JREGIONAL_MAKE_OROG  JREGIONAL_MAKE_SFC_CLIMO  JREGIONAL_NONVARCLD  JREGIONAL_PROCESS_BUFR  JREGIONAL_PROCESS_LIGHTNING  JREGIONAL_PROCESS_RADARREF  JREGIONAL_PROCESS_SMOKE  JREGIONAL_REFL2TTEN  JREGIONAL_RUN_ANAL  JREGIONAL_RUN_ENKF  JREGIONAL_RUN_ENKF_POST  JREGIONAL_RUN_ENKF_PRE  JREGIONAL_RUN_ENSPOST  JREGIONAL_RUN_FCST  JREGIONAL_RUN_GSIDIAG  JREGIONAL_RUN_POST  JREGIONAL_RUN_POSTANAL  JREGIONAL_RUN_PRDGEN  JREGIONAL_RUN_PREPSTART  JREGIONAL_RUN_PREPSTART_ENSFCST  JREGIONAL_RUN_PREPSTART_ENSMEAN  JREGIONAL_RUN_RECENTER  (+101 more)
sorc/: CMakeLists.txt  Externals.cfg  Registry.xml  app_build.sh  build.all  build.mpas  build.mpas.cmake  build.mpas_cmake  build.mpassit  build.rank_run  build.rdas  build.upp  build.utils  build.wps  build_all.sh  build_chgres.sh  build_cycle.sh  build_enkf_chgres_recenter.sh  build_forecast.sh  build_fre-nctools.sh  build_global_equiv_resol.sh  build_mosaic_file.sh  build_orog.sh  build_post.sh  build_regional_grid.sh  build_sfcanl_nsttfchg.sh  build_utils.sh  install_all.sh  link_fix.sh  machine-setup.sh  partial_build.sh  regional_build.cfg  rrfs-workflow.settings.in
sorc/_workaround_/: CMakeLists.txt  Registry.xml  err_exit  streams.atmosphere
sorc/_workaround_/MPAS-Model/: Makefile  Registry.xml  mpas_atm_core.F
sorc/_workaround_/MPASSIT/: build.hercules.intel.lua  build.sh
sorc/_workaround_/RDASApp/: ObsErrorFactorPressureCheck.cc  ObsErrorFactorPressureCheck.h  TimeoffsetVariable.cpp  hera.gnu.lua  hercules.intel.lua  mpas_fields_mod.F90  orion.intel.lua
sorc/_workaround_/RDASApp/direct_refl/: mpas2ufo_vars_mod.F90  mpas_state_mod.F90
sorc/_workaround_/RDASApp/gsibec/: balmod.F90  control2state.F90  control2state_ad.F90  gridmod.F90  gsi_rfv3io_mod.f90  gsimod.F90  guess_grids.f90  mod_fv3_lola.f90
sorc/_workaround_/RDASApp/mpas-jedi/: mpas_fields_mod.F90  mpas_state_mod.F90
sorc/_workaround_/RDASApp/obsfunctions/: ObsErrorFactorPressureCheck.cc
sorc/_workaround_/RDASApp/saber/: ErrorCovarianceToolbox.h  GSIParameters.h  Geometry.cc  GridCheckHelper.cc  MoistIncrOp.cc  ProcessPerts.h  gsi_covariance_mod.f90  gsi_grid_mod.f90
sorc/_workaround_/RDASApp/sfccorrected/: CMakeLists.txt  EvalSurfaceHumidity.cc  EvalSurfaceHumidity.h  EvalSurfaceTemperature.cc  EvalSurfaceTemperature.h  EvalSurfaceWind.cc  EvalSurfaceWind.h  ObsSfcCorrected.cc  ObsSfcCorrectedParameters.h  ufo_sfccorrected_mod.F90
sorc/_workaround_/UPP/: INITPOST_MPAS.F  wcoss2.lua
sorc/_workaround_/WPS/: configure.wps_wcoss2
sorc/_workaround_/sfccorrected/: CMakeLists.txt  ObsSfcCorrected.cc  ObsSfcCorrected.h  ObsSfcCorrected.interface.F90  ObsSfcCorrected.interface.h  ObsSfcCorrectedParameters.cc  ObsSfcCorrectedParameters.h
sorc/calc_RES_glob_equiv/: Makefile  calc_RES_glob_equiv.f90
sorc/chgres_cube/run/: config.C1152.l91.atm.theia.nml  config.C1152.l91.dell.nml  config.C1152.theia.nml  config.C3343.theia.nml  config.C384.cray.nml  config.C384.dell.nml  config.C384.gaussian.dell.nml  config.C384.theia.nml  config.C48.cray.nml  config.C48.dell.nml  config.C48.gaussian.theia.nml  config.C48.theia.nml  config.C768.atm.theia.nml  config.C768.l91.atm.theia.nml  config.C768.l91.dell.nml  config.C768.nest.atm.odin.nml  config.C768.nest.atm.theia.nml  config.C768.nest.cray.nml  config.C768.stretch.cray.nml  config.C768.stretch.theia.nml  config.C768.theia.nml  run.cray.sh  run.dell.sh  run.odin.sh  run.theia.ksh  run.theia.ksh_new
sorc/chgres_cube/sorc/: Makefile  atmdata_type.mod  atmosphere.F90  atmosphere.mod  build_grb_chgres.sh  grib2_util.F90  grib2_util.mod  input_data.F90  input_data.mod  machine-setup.sh  model_grid.F90  model_grid.mod  out.txt  program_setup.f90  program_setup.mod  search_util.f90  search_util.mod  static_data.mod  surface.F90  surface.mod  write_data.F90
sorc/create_grid_mosaic_file/: Makefile  create_grid_mosaic_file.f90
sorc/fre-nctools.fd/tools/filter_topo/: make.csh_cheyenne  make.csh_hera  make.csh_jet  make.csh_odin  make.csh_theia  make.csh_wcoss  make.csh_wcoss_cray  make.csh_wcoss_dell_p3
sorc/fre-nctools.fd/tools/fregrid/: env.jet
sorc/fre-nctools.fd/tools/shave.fd/: build_shave
sorc/global_chgres.fd/: chgres.f90  chgres_utils.f90  read_write.f90  surface_chgres.f90
sorc/global_equiv_resol.fd/: Makefile_cheyenne  Makefile_odin  Makefile_stampede  Makefile_theia  compile.sh
sorc/grb2nemsio.fd/: README  grb2nemsio_main.f90  grb2nemsio_module.f90  makefile.sh
sorc/manage_externals/: checkout_externals
sorc/mosaic_file.fd/: Makefile_cheyenne  Makefile_jet  Makefile_odin  Makefile_stampede  mosaic_file.f90
sorc/regional_grid/: cstgeo.mod  dcstgeo.mod  pietc.mod  pkind.mod  pmat.mod  pmat4.mod  pmat5.mod  psym2.mod  regional_grid.f90  regional_grid.nc.REMOVED.git-id  regional_grid.nml  regional_grid_3km.nml
sorc/regional_grid.fd/: Makefile_cheyenne  Makefile_jet  Makefile_odin  Makefile_stampede  compile.sh
(+10962 files in other folders)
